move all event-filtering into PreprocessingCte.